--- a/app/assets/stylesheets/01_header.scss
+++ b/app/assets/stylesheets/01_header.scss
@@ -3,8 +3,44 @@
     justify-content: space-between;
     box-sizing: border-box;
     align-items: center;
-    height: 60px;
+    // height: 50px;
     padding: 0 10px;
+    // position: fixed;
+    min-width: auto;
+    // box-shadow: var(--bs-sm);
+    box-shadow: 0 1px 2px hsla(0,0%,0%,0.05),0 1px 4px hsla(0,0%,0%,0.05),0 2px 8px hsla(0,0%,0%,0.05);
+    // top: 0;
+    // left: 0;
+    width: 100%;
+    // z-index: 5050;
+    background-color: hsl(210,8%,97.5%);
+    height: 50px;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Liberation Sans",sans-serif;
+    border-top: solid 3px orange;
+    color: black;
+    // border-top: var(--theme-topbar-border-top-size, 3px) solid var(--theme-primary-color);
+}
+
+.home-link {
+    // width: 175px;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    text-decoration: none;
+    padding: 0 5px;
+    color: black;
+    font-size: large;
+    // margin-top: -4px;
+}
+
+.home-link:hover {
+    background-color: hsl(210,8%,90%);
+}
+
+.header-logo {
+    height: 40px;
+    width: 40px;
 }
 
 .greeting-links, .greeting-message {
@@ -15,10 +51,64 @@
     margin-right: 10px;
 }
 
+// .login-button, .signup-button {
+//     box-sizing: border-box;
+//     box-shadow: inset;
+//     // box-shadow: inset 0 1px 0 0 hsl(0deg, 0%, 100% / 70%);
+// }
+
 .login-button {
-    margin-right: 10px;
+    margin-right: 5px;
+    color: hsl(205,47%,42%);
+    background-color: hsl(205,46%,92%);
+    // box-sizing: border-box;
+    // box-shadow: inset 0 1px 0 0 hsl(0deg, 0%, 100% / 70%);
+    // position: relative;
+    // display: inline-block;
+    padding: 0.8em;
+    border: solid 1px hsl(205,41%,63%);
+    // color: var(--theme-button-color);
+    // border: 1px solid transparent;
+    border-radius: 3px;
+    // background-color: transparent;
+    outline: none;
+    font-family: inherit;
+    font-size: 13px;
+    font-weight: normal;
+    line-height: 1.15384615;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    user-select: none;
+    padding-top: 8px !important;
+    padding-bottom: 8px !important;
 }
 
-// .signup-button {
+.login-button:hover {
+    background-color: hsl(205,57%,81%);
+}
 
-// }
+.signup-button {
+    // position: relative;
+    // display: inline-block;
+    padding: 0.8em;
+    color: hsl(0,0%,100%);
+    border: 1px solid transparent;
+    border-radius: 3px;
+    background-color: hsl(206,100%,52%);
+    outline: none;
+    font-family: inherit;
+    font-size: 13px;
+    font-weight: normal;
+    line-height: 1.15384615;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    user-select: none;
+    padding-top: 8px !important;
+    padding-bottom: 8px !important;
+}
+
+.signup-button:hover {
+        background-color: hsl(209,100%,37.5%)
+}
