--- a/app/assets/stylesheets/02_session.scss
+++ b/app/assets/stylesheets/02_session.scss
@@ -5,8 +5,22 @@
     align-items: center;
     align-self: center;
     width: 300px;
+    // height: 100%;
     margin: 0 auto;
     margin-top: 300px;
     padding: 10px;
-    border: 1px solid black
+    // border: 1px solid black;
+    max-width: 24.3076923rem !important;
+    padding: 24px !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    margin-bottom: 24px !important;
+    border-radius: 7px !important;
+    background-color: hsl(0,0%,100%);
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05), 0 20px 48px rgba(0, 0, 0, 0.05), 0 1px 4px rgba(0, 0, 0, 0.10);
 }
+
+// .form-logo {
+//     height: 50px;
+//     width: 50px;
+// }
