--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <link rel="shortcut icon" href="<%= image_url('logo.png') %>"/>
+
+    <script type="text/javascript">
+      window.logo = "<%= image_url('logo.png') %>"
+    </script>
+
   </head>
 
   <body>
