Update auth forms and add demo user

--- a/app/assets/stylesheets/01_header.scss
+++ b/app/assets/stylesheets/01_header.scss
@@ -15,7 +15,7 @@
     // z-index: 5050;
     background-color: hsl(210,8%,97.5%);
     height: 50px;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Liberation Sans",sans-serif;
+    // font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Liberation Sans",sans-serif;
     border-top: solid 3px orange;
     color: black;
     // border-top: var(--theme-topbar-border-top-size, 3px) solid var(--theme-primary-color);
@@ -45,6 +45,7 @@
 
 .greeting-links, .greeting-message {
     display: flex;
+    align-items: center;
 }
 
 .greeting-message h2 {
@@ -88,7 +89,7 @@
     background-color: hsl(205,57%,81%);
 }
 
-.signup-button {
+.signup-button, .greeting-logout {
     // position: relative;
     // display: inline-block;
     padding: 0.8em;
@@ -109,6 +110,6 @@
     padding-bottom: 8px !important;
 }
 
-.signup-button:hover {
+.signup-button:hover, .greeting-logout:hover {
         background-color: hsl(209,100%,37.5%)
 }
