--- a/app/assets/stylesheets/02_session.scss
+++ b/app/assets/stylesheets/02_session.scss
@@ -1,16 +1,26 @@
+.session {
+    display: flex;
+    flex-direction: column;
+}
+
+.session-form-logo {
+    margin-top: 75px;
+    margin-bottom: 15px;
+    align-self: center;
+    height: 50px;
+    width: 50px;
+}
+
 .session-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     align-self: center;
-    width: 300px;
-    // height: 100%;
     margin: 0 auto;
-    margin-top: 300px;
     padding: 10px;
-    // border: 1px solid black;
-    max-width: 24.3076923rem !important;
+    // max-width: 24.3076923rem !important;
+    width: 250px;
     padding: 24px !important;
     margin-left: auto !important;
     margin-right: auto !important;
@@ -20,7 +30,84 @@
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05), 0 20px 48px rgba(0, 0, 0, 0.05), 0 1px 4px rgba(0, 0, 0, 0.10);
 }
 
-// .form-logo {
-//     height: 50px;
-//     width: 50px;
-// }
+.session-options {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px !important;
+}
+
+.session-options-link {
+    text-decoration: none;
+    cursor: pointer;
+    color: hsl(205,47%,42%);
+}
+
+.session-form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.session-input-container {
+    display: flex;
+    flex-direction: column;
+    margin: 6px;
+    margin-right: 0;
+    margin-left: 0;
+    width: 100%;
+    font-size: 1rem;
+
+}
+
+.session-label {
+    margin: 2px;
+    margin-right: 0;
+    margin-left: 0;
+    padding: 0 2px;
+    cursor: pointer;
+    color: hsl(210,8%,5%);
+    font-family: inherit;
+    // font-size: 1.15384615rem;
+    font-weight: 600;
+}
+
+.session-input {
+    -webkit-appearance: none;
+    margin: 0;
+    padding: 0.6em 0.7em;
+    border: 1px solid hsl(210,8%,75%);
+    border-radius: 3px;
+    background-color: hsl(0,0%,100%);
+    color: hsl(210,8%,5%);
+    font-size: 13px;
+    font-family: inherit;
+}
+
+.session-submit-button, .demo-user {
+    padding: 0.8em;
+    color: hsl(0,0%,100%);
+    border: 1px solid transparent;
+    border-radius: 3px;
+    background-color: hsl(206,100%,52%);
+    outline: none;
+    font-family: inherit;
+    font-size: 13px;
+    font-weight: normal;
+    line-height: 1.15384615;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    user-select: none;
+    padding-top: 8px !important;
+    padding-bottom: 8px !important;
+    width: 100%;
+    margin: 6px;
+    margin-right: 0;
+    margin-left: 0;
+}
+
+.session-submit-button:hover, .demo-user:hover {
+        background-color: hsl(209,100%,37.5%)
+}
