--- a/app/assets/stylesheets/00_reset.scss
+++ b/app/assets/stylesheets/00_reset.scss
@@ -49,6 +49,8 @@ table {
 
 html {
 	height: 100%;
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Liberation Sans",sans-serif;
+
 }
 
 body {
