--- a/app/assets/stylesheets/03_splash.scss
+++ b/app/assets/stylesheets/03_splash.scss
@@ -1,6 +1,157 @@
 .splash-container {
     height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.splash-main-content {
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+    align-items: center;
+    height: 100%;
+    min-width: 625px;
+    margin: 35px;
+    margin-top: 85px;
+    background: linear-gradient(hsl(210,8%,15%) 0%, hsl(210,8%,35%) 130%);
+    border-radius: 7px;
+    // max-width: 1250px;
+    // margin: 35px auto;
+}
+
+.splash-ctas {
+    display: flex;
+}
+
+@media (max-width: 1305px) {
+    .splash-ctas {
+        flex-direction: column;
+    }
+
+    .splash-join-cta {
+        margin: 35px !important;
+        margin-bottom: 17.5px !important;
+    }
+
+    .splash-login-cta {
+        margin: 35px !important;
+        margin-top: 17.5px !important;
+    }
+
+    .splash-message {
+        width: 500px !important;
+    }
+    
+}
+
+.splash-spy-glass, .splash-lock {
+    width: 48px;
+    height: 48px;
+}
+
+.splash-join-cta {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 35px;
+    margin-right: 17.5px;
+    padding: 24px;
+    background-color: hsl(27,95%,90%);
+    color: hsl(210,8%,15%);
+    width: 450px;
+    height: 280px;
+    border-radius: 7px;
+    font-size: 19px;
+}
+
+.splash-login-cta {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 35px;
+    margin-left: 17.5px;
+    padding: 24px;
+    background-color: hsl(206,96%,90%);
+    color: hsl(210,8%,15%);
+    width: 450px;
+    height: 280px;
+    border-radius: 7px;
+    font-size: 19px;
+}
+
+.splash-spy-glass path {
+    // stroke: hsl(27,90%,50%);
+    fill: hsl(27,90%,50%) !important;
+}
+
+.splash-lock path {
+    // stroke: hsl(27,90%,50%);
+    fill: hsl(206,100%,52%) !important;
+}
+
+.splash-join-cta p, .splash-login-cta p {
+    text-align: center;
+    width: 60%;
+    margin: 0 auto;
+}
+
+.splash-join-link {
+    font-family: 'Source Sans Pro Bold',sans-serif;
+    font-weight: 500;
+    background-color: hsl(27,90%,50%);
+    color: hsl(0,0%,100%);
+    text-decoration: none;
+    padding: 0.8em;
+    cursor: pointer;
+    text-align: center;
+    line-height: 1.15;
+    padding-left: 32px;
+    padding-right: 32px;
+    border-radius: 5px;
+    font-size: 16px;
+
+}
+
+.splash-login-link {
+    font-family: 'Source Sans Pro Bold',sans-serif;
+    font-weight: 500;
+    background-color: hsl(206,100%,52%);
+    color: hsl(0,0%,100%);
+    text-decoration: none;
+    padding: 0.8em;
+    cursor: pointer;
+    text-align: center;
+    line-height: 1.15;
+    padding-left: 32px;
+    padding-right: 32px;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.splash-message {
+    font-size: 55px;
+    color: hsl(0,0%,100%);
+    text-align: center;
+    font-family: 'Source Sans Pro Bold';
+    width: 70%;
+}
+
+.splash-details {
+
+}
+
+.splash-detail {
+
+}
+
+.splash-about-details {
+
+}
+
+.splash-build-community-cta {
+
 }
