--- a/app/assets/stylesheets/00_reset.scss
+++ b/app/assets/stylesheets/00_reset.scss
@@ -66,3 +66,30 @@ body {
 	// min-height: 100%;
 	// height: inherit;
 }
+
+h1 {
+	font-size: 32px;
+	font-weight: bold;
+}
+
+h2 {
+	font-size: 24px;
+	font-weight: bold;
+}
+
+h3 {
+	font-size: 18px;
+	font-weight: bold;
+}
+h4 {
+	font-size: 16px;
+	font-weight: bold;
+}
+h5 {
+	font-size: 13.5px;
+	font-weight: bold;
+}
+h6 {
+	font-size: 12px;
+	font-weight: bold;
+}
