--- a/app/assets/stylesheets/01_header.scss
+++ b/app/assets/stylesheets/01_header.scss
@@ -5,7 +5,7 @@
     align-items: center;
     // height: 50px;
     padding: 0 10px;
-    // position: fixed;
+    position: fixed;
     min-width: auto;
     // box-shadow: var(--bs-sm);
     box-shadow: 0 1px 2px hsla(0,0%,0%,0.05),0 1px 4px hsla(0,0%,0%,0.05),0 2px 8px hsla(0,0%,0%,0.05);
