Setup basic container and components for questions, add navbar link to questions index

--- a/app/assets/stylesheets/01_header.scss
+++ b/app/assets/stylesheets/01_header.scss
@@ -113,3 +113,7 @@
 .signup-button:hover, .greeting-logout:hover {
         background-color: hsl(209,100%,37.5%)
 }
+
+.nav-bar-links {
+    display: flex;
+}
