Add basic styling to questions, turn subjects into links, buggy on index item load, missing props

--- a/app/assets/stylesheets/02_session.scss
+++ b/app/assets/stylesheets/02_session.scss
@@ -90,7 +90,7 @@
 //     border: 1px solid hsl(205,47%,42%) !important;
 // }
 
-.session-submit-button, .demo-user {
+.session-submit-button, .demo-user, .ask-question-btn {
     padding: 0.8em;
     color: hsl(0,0%,100%);
     border: 1px solid transparent;
